# my-discord-bot

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  pyproject.toml  requirements.txt
bot/: __init__.py  client.py  main.py
bot/cogs/: claude.py  general.py  scoreboard.py
bot/utils/: helpers.py
config/: __init__.py  settings.py
tests/: __init__.py  test_helpers.py
